# rust-chess

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  FUNDING.md  Makefile  README.md  SECURITY.md
.github/: funding.yml
.github/workflows/: ci.yml  publish.yml
src/: config.rs  lib.rs  main.rs
src/ai/: engine.rs  evaluation.rs  mod.rs
src/api/: errors.rs  handlers.rs  models.rs  router.rs  state.rs
src/chat/: mod.rs  providers.rs  service.rs  types.rs
src/engine/: attacks.rs  board.rs  game.rs  mod.rs  movegen.rs  pgn.rs  san.rs  types.rs  zobrist.rs
src/ws/: handler.rs  manager.rs  messages.rs  mod.rs
tests/: perft.rs  websocket.rs
