[package]
name = "rust-chess"
version = "0.1.0"
edition = "2024"
authors = ["Rumen Damyanov <contact@rumenx.com>"]
description = "A high-performance chess engine and REST API server written in Rust"
license = "MIT"
repository = "https://github.com/RumenDamyanov/rust-chess"
keywords = ["chess", "engine", "bitboard", "api", "axum"]
categories = ["games", "web-programming::http-server"]

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
uuid = { version = "1", features = ["v4"] }
rand = "0.10"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

[dev-dependencies]
tokio-test = "0.4"
http-body-util = "0.1"
tower = { version = "0.5", features = ["util"] }

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"
